ADD::Voting form template

--- a/src/main/resources/templates/voting-form.html
+++ b/src/main/resources/templates/voting-form.html
@@ -1,10 +1,71 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
     <title>Voting Form</title>
 </head>
 <body>
-<h1>Voting Form</h1>
+
+<div class="container">
+    <div style="height: 100px"></div>
+    <div class="row">
+        <div class="col-3">
+
+        </div>
+        <div class="col-6">
+
+            <h2>Voting Form</h2>
+            <form>
+                <div class="form-group">
+                    <label for="exampleFormControlInput1">Email address</label>
+                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                </div>
+                <div class="form-group">
+                    <label for="exampleFormControlSelect1">Election Party</label>
+                    <select class="form-control" id="exampleFormControlSelect1">
+                        <option>Party 1</option>
+                        <option>Party 2</option>
+                        <option>Party 3</option>
+                        <option>Party 4</option>
+                        <option>Party 5</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="exampleFormControlSelect2">Candidate</label>
+                    <select multiple class="form-control" id="exampleFormControlSelect2">
+                        <option>Maithipala Sirisena (01)</option>
+                        <option>Mahinda Rajapaksha (02)</option>
+                        <option>Nimal Siripalada Silva (03)</option>
+                        <option>Wimal Weerawansha (04)</option>
+                        <option>Anura Kumara Dissanayaka (05)</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <button class="btn btn-danger">CANCEL VOTE</button>
+                    <button class="btn btn-primary">VOTE</button>
+                </div>
+            </form>
+
+        </div>
+        <div class="col-3">
+
+        </div>
+    </div>
+</div>
+
+
+
+
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
