--- a/src/main/resources/templates/fragments/layout-fragments.html
+++ b/src/main/resources/templates/fragments/layout-fragments.html
@@ -20,6 +20,10 @@
     <link rel="stylesheet" th:href="@{plugins/daterangepicker/daterangepicker.css}">
     <!-- summernote -->
     <link rel="stylesheet" th:href="@{plugins/summernote/summernote-bs4.min.css}">
+    <!-- DataTables -->
+    <link rel="stylesheet" th:href="@{plugins/datatables-bs4/css/dataTables.bootstrap4.min.css}">
+    <link rel="stylesheet" th:href="@{plugins/datatables-responsive/css/responsive.bootstrap4.min.css}">
+    <link rel="stylesheet" th:href="@{plugins/datatables-buttons/css/buttons.bootstrap4.min.css}">
 </div>
 <div th:fragment="scripts">
     <!-- jQuery -->
@@ -50,6 +54,19 @@
     <script th:src="@{plugins/summernote/summernote-bs4.min.js}"></script>
     <!-- overlayScrollbars -->
     <script th:src="@{plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js}"></script>
+    <!-- DataTables  & Plugins -->
+    <script th:src="@{plugins/datatables/jquery.dataTables.min.js}"></script>
+    <script th:src="@{plugins/datatables-bs4/js/dataTables.bootstrap4.min.js}"></script>
+    <script th:src="@{plugins/datatables-responsive/js/dataTables.responsive.min.js}"></script>
+    <script th:src="@{plugins/datatables-responsive/js/responsive.bootstrap4.min.js}"></script>
+    <script th:src="@{plugins/datatables-buttons/js/dataTables.buttons.min.js}"></script>
+    <script th:src="@{plugins/datatables-buttons/js/buttons.bootstrap4.min.js}"></script>
+    <script th:src="@{plugins/jszip/jszip.min.js}"></script>
+    <script th:src="@{plugins/pdfmake/pdfmake.min.js}"></script>
+    <script th:src="@{plugins/pdfmake/vfs_fonts.js}"></script>
+    <script th:src="@{plugins/datatables-buttons/js/buttons.html5.min.js}"></script>
+    <script th:src="@{plugins/datatables-buttons/js/buttons.print.min.js}"></script>
+    <script th:src="@{plugins/datatables-buttons/js/buttons.colVis.min.js}"></script>
     <!-- AdminLTE App -->
     <script th:src="@{dist/js/adminlte.js}"></script>
     <!-- AdminLTE for demo purposes -->
@@ -65,7 +82,7 @@
 <!-- Preloader -->
 <div th:fragment="preloader" class="preloader flex-column justify-content-center align-items-center">
     <!--        <img class="animation__shake" th:src="@{dist/img/AdminLTELogo.png}" alt="AdminLTELogo" height="60" width="60">-->
-    <h2 class="animation__wobble" >Election Voting System</h2>
+    <h2 class="animation__wobble">Election Voting System</h2>
 </div>
 
 <div th:fragment="page_header(title)" class="content-header">
@@ -74,12 +91,12 @@
             <div class="col-sm-6">
                 <h1 th:text="${title}" class="m-0">Dashboard</h1>
             </div><!-- /.col -->
-<!--            <div class="col-sm-6">-->
-<!--                <ol class="breadcrumb float-sm-right">-->
-<!--                    <li class="breadcrumb-item"><a href="#">Home</a></li>-->
-<!--                    <li class="breadcrumb-item active">Dashboard v1</li>-->
-<!--                </ol>-->
-<!--            </div>&lt;!&ndash; /.col &ndash;&gt;-->
+            <!--            <div class="col-sm-6">-->
+            <!--                <ol class="breadcrumb float-sm-right">-->
+            <!--                    <li class="breadcrumb-item"><a href="#">Home</a></li>-->
+            <!--                    <li class="breadcrumb-item active">Dashboard v1</li>-->
+            <!--                </ol>-->
+            <!--            </div>&lt;!&ndash; /.col &ndash;&gt;-->
         </div><!-- /.row -->
     </div><!-- /.container-fluid -->
 </div>
