--- a/src/main/resources/templates/fragments/footer-fragments.html
+++ b/src/main/resources/templates/fragments/footer-fragments.html
@@ -1,7 +1,7 @@
 <footer th:fragment="footer" class="main-footer">
-    <strong>Copyright &copy; 2014-2021 <a href="https://adminlte.io">AdminLTE.io</a>.</strong>
+    <strong>Copyright &copy; 2021 <a href="#">Election Voting System LK</a>.</strong>
     All rights reserved.
     <div class="float-right d-none d-sm-inline-block">
-        <b>Version</b> 3.1.0
+        <b>Version</b> 1.1.0
     </div>
 </footer>
