--- a/src/main/resources/templates/fragments/layout-fragments.html
+++ b/src/main/resources/templates/fragments/layout-fragments.html
@@ -24,6 +24,10 @@
     <link rel="stylesheet" th:href="@{plugins/datatables-bs4/css/dataTables.bootstrap4.min.css}">
     <link rel="stylesheet" th:href="@{plugins/datatables-responsive/css/responsive.bootstrap4.min.css}">
     <link rel="stylesheet" th:href="@{plugins/datatables-buttons/css/buttons.bootstrap4.min.css}">
+    <!-- SweetAlert2 -->
+    <link rel="stylesheet" th:href="@{plugins/sweetalert2-theme-bootstrap-4/bootstrap-4.min.css}">
+    <!-- Toastr -->
+    <link rel="stylesheet" th:href="@{plugins/toastr/toastr.min.css}">
 </div>
 <div th:fragment="scripts">
     <!-- jQuery -->
@@ -67,6 +71,10 @@
     <script th:src="@{plugins/datatables-buttons/js/buttons.html5.min.js}"></script>
     <script th:src="@{plugins/datatables-buttons/js/buttons.print.min.js}"></script>
     <script th:src="@{plugins/datatables-buttons/js/buttons.colVis.min.js}"></script>
+    <!-- SweetAlert2 -->
+    <script th:src="@{plugins/sweetalert2/sweetalert2.min.js}"></script>
+    <!-- Toastr -->
+    <script th:src="@{plugins/toastr/toastr.min.js}"></script>
     <!-- AdminLTE App -->
     <script th:src="@{dist/js/adminlte.js}"></script>
     <!-- AdminLTE for demo purposes -->
