--- a/src/main/resources/templates/citizens-list.html
+++ b/src/main/resources/templates/citizens-list.html
@@ -505,13 +505,15 @@
 <div class="modal fade" id="customer-registration-modal">
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
-            <form action="#">
+            <form th:action="@{/citizen-registration-request}" method="post">
                 <div class="modal-header">
                     <h4 class="modal-title">Citizen Registration</h4>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
+                <input type="text" hidden name="formType" id="formType" value="0">
+                <input type="text" hidden name="formId" id="formId" value="0">
                 <div class="modal-body">
                     <!--                    <div class="form-group">-->
                     <!--                        <label>Province</label>-->
