--- a/src/main/resources/templates/fragments/sidebar-menu-fragments.html
+++ b/src/main/resources/templates/fragments/sidebar-menu-fragments.html
@@ -39,6 +39,14 @@
                 </p>
             </a>
         </li>
+        <li class="nav-item">
+            <a th:href="@{elections-list}" class="nav-link active">
+                <i class="nav-icon fas fa-vote-yea"></i>
+                <p>
+                    Elections
+                </p>
+            </a>
+        </li>
     </ul>
 </nav>
 
