--- a/src/main/resources/templates/elections-list.html
+++ b/src/main/resources/templates/elections-list.html
@@ -75,7 +75,17 @@
                                         <th>2022-03-05 10:05:05</th>
                                         <th>John Doe</th>
                                         <td>
-                                            <button type="button" class="btn btn-success"
+                                            <button type="button" class="btn btn-success">
+                                                <i class="fas fa-play"></i>
+                                            </button>
+                                            <button type="button" class="btn btn-info">
+                                                <i class="fas fa-stop"></i>
+                                            </button>
+                                            <button type="button" class="btn btn-primary"
+                                                    data-toggle="modal" data-target="#election-add-candidates-modal"><i
+                                                    class="fas fa-user-plus"></i>
+                                            </button>
+                                            <button type="button" class="btn btn-warning"
                                                     data-toggle="modal" data-target="#election-registration-modal"><i
                                                     class="fas fa-edit"></i>
                                             </button>
@@ -118,6 +128,8 @@
 <!--Begin::Citizen Registration-->
 <div th:replace="fragments/modal-fragments::election"></div>
 <!--End::Citizen Registration-->
+<!--BEGIN::Election Add Candidates-->
+<div th:replace="fragments/modal-fragments::election_add_candidates"></div>
 
 <div th:replace="fragments/layout-fragments::scripts"></div>
 <!-- Page specific script -->
@@ -127,16 +139,19 @@
             "responsive": true, "lengthChange": false, "autoWidth": false,
             "buttons": ["copy", "csv", "excel", "pdf", "print", "colvis"]
         }).buttons().container().appendTo('#example1_wrapper .col-md-6:eq(0)');
-        // $('#example2').DataTable({
-        //     "paging": true,
-        //     "lengthChange": false,
-        //     "searching": false,
-        //     "ordering": true,
-        //     "info": true,
-        //     "autoWidth": false,
-        //     "responsive": true,
-        // });
+        $('#candidates').DataTable({
+            "paging": true,
+            "lengthChange": false,
+            "searching": true,
+            "ordering": true,
+            "info": true,
+            "autoWidth": false,
+            "responsive": true,
+        });
     });
+    //Bootstrap Duallistbox
+    // $('.duallistbox').bootstrapDualListbox()
+
 </script>
 </body>
 </html>
