--- a/src/main/resources/templates/fragments/layout-fragments.html
+++ b/src/main/resources/templates/fragments/layout-fragments.html
@@ -28,6 +28,8 @@
     <link rel="stylesheet" th:href="@{plugins/sweetalert2-theme-bootstrap-4/bootstrap-4.min.css}">
     <!-- Toastr -->
     <link rel="stylesheet" th:href="@{plugins/toastr/toastr.min.css}">
+    <!-- Bootstrap4 Duallistbox -->
+    <link rel="stylesheet" th:href="@{plugins/bootstrap4-duallistbox/bootstrap-duallistbox.min.css}">
 </div>
 <div th:fragment="scripts">
     <!-- jQuery -->
@@ -81,6 +83,10 @@
     <script th:src="@{dist/js/demo.js}"></script>
     <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
     <script th:src="@{dist/js/pages/dashboard.js}"></script>
+    <!-- Select2 -->
+    <script th:src="@{plugins/select2/js/select2.full.min.js}"></script>
+    <!-- Bootstrap4 Duallistbox -->
+    <script th:src="@{plugins/bootstrap4-duallistbox/jquery.bootstrap-duallistbox.min.js}"></script>
 </div>
 
 <aside th:fragment="theme_settings" class="control-sidebar control-sidebar-dark">
