--- a/src/main/resources/templates/fragments/modal-fragments.html
+++ b/src/main/resources/templates/fragments/modal-fragments.html
@@ -1,4 +1,3 @@
-
 <div th:fragment="citizen" class="modal fade" id="customer-registration-modal">
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
@@ -278,7 +277,8 @@
                 <div class="modal-body">
                     <div class="form-group">
                         <label for="name">Name of the Election</label>
-                        <input type="text" class="form-control" id="name" name="name" placeholder="Name of the Election" required>
+                        <input type="text" class="form-control" id="name" name="name" placeholder="Name of the Election"
+                               required>
                     </div>
                     <div class="form-group">
                         <label for="year">Year</label>
@@ -297,12 +297,14 @@
                     </div>
                     <div class="form-group">
                         <label for="startTime">Start Time</label>
-                        <input type="datetime-local" class="form-control" id="startTime" name="startTime" placeholder="Start Time"
+                        <input type="datetime-local" class="form-control" id="startTime" name="startTime"
+                               placeholder="Start Time"
                                required>
                     </div>
                     <div class="form-group">
                         <label for="endTime">End Time</label>
-                        <input type="datetime-local" class="form-control" id="endTime" name="endTime" placeholder="End Time"
+                        <input type="datetime-local" class="form-control" id="endTime" name="endTime"
+                               placeholder="End Time"
                                required>
                     </div>
                 </div>
@@ -311,6 +313,71 @@
                     <button type="submit" class="btn btn-primary">Save</button>
                 </div>
             </form>
+        </div>
+        <!-- /.modal-content -->
+    </div>
+    <!-- /.modal-dialog -->
+</div>
+
+
+<div th:fragment="election_add_candidates" class="modal fade" id="election-add-candidates-modal">
+    <div class="modal-dialog modal-xl">
+        <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Add Candidates to the Election</h4>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+
+                    <table id="candidates" class="table table-bordered table-striped">
+                        <thead>
+                        <tr>
+                            <th>No.</th>
+                            <th>Province</th>
+                            <th>District</th>
+                            <th>Polling Division</th>
+                            <th>Political Party</th>
+                            <th>NIC</th>
+                            <th>Full Name</th>
+                            <th>Gender</th>
+                            <th>Email</th>
+                            <th>Mobile</th>
+                            <th>Actions</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <td>1</td>
+                            <td>Western</td>
+                            <td>Colombo</td>
+                            <td>A - Colombo North</td>
+                            <th>Sri Lanka Freedom Party(SLFP)</th>
+                            <td>945465666v</td>
+                            <td>John Smith</td>
+                            <td>Male</td>
+                            <td>john@gmail.com</td>
+                            <td>+94771234567</td>
+                            <td>
+                                <form th:action="@{/assign-candidate-to-election}" method="post">
+                                    <input type="text" hidden value="0" id="electionId" name="election">
+                                    <input type="text" hidden value="0" id="candidateId" name="candidateId">
+                                    <button type="submit" class="btn btn-success"><i class="fa fa-plus-square"></i></button>
+                                </form>
+                            </td>
+                        </tr>
+                        </tbody>
+                    </table>
+
+                </div>
+                <div class="modal-footer justify-content-between">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <form th:action="@{/assign-all-candidates-to-election}" method="post">
+                        <input type="text" hidden value="0" id="election" name="election">
+                        <button type="submit" class="btn btn-primary"><i class="fa fa-plus-square"></i> Add All</button>
+                    </form>
+                </div>
         </div>
         <!-- /.modal-content -->
     </div>
