ADD::Candidate number

--- a/src/main/resources/templates/candidates-list.html
+++ b/src/main/resources/templates/candidates-list.html
@@ -60,6 +60,7 @@
                                         <th>District</th>
                                         <th>Polling Division</th>
                                         <th>Political Party</th>
+                                        <th>Number</th>
                                         <th>NIC</th>
                                         <th>Full Name</th>
                                         <th>Gender</th>
@@ -75,6 +76,7 @@
                                         <td>Colombo</td>
                                         <td>A - Colombo North</td>
                                         <th>Sri Lanka Freedom Party(SLFP)</th>
+                                        <th>5</th>
                                         <td>945465666v</td>
                                         <td>John Smith</td>
                                         <td>Male</td>
@@ -96,6 +98,7 @@
                                         <th>District</th>
                                         <th>Polling Division</th>
                                         <th>Political Party</th>
+                                        <th>Number</th>
                                         <th>NIC</th>
                                         <th>Full Name</th>
                                         <th>Gender</th>
