--- a/src/main/resources/templates/fragments/modal-fragments.html
+++ b/src/main/resources/templates/fragments/modal-fragments.html
@@ -215,6 +215,10 @@
                         </select>
                     </div>
                     <div class="form-group">
+                        <label for="nic">Number</label>
+                        <input type="number" class="form-control" id="electionNumber" name="electionNumber" placeholder="Enter Election umber" required>
+                    </div>
+                    <div class="form-group">
                         <label for="nic">NIC Number</label>
                         <input type="text" class="form-control" id="nic" name="nic" placeholder="Enter NIC" required>
                     </div>
