--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" th:href="@{plugins/icheck-bootstrap/icheck-bootstrap.min.css}">
     <!-- Theme style -->
     <link rel="stylesheet" th:href="@{dist/css/adminlte.min.css}">
+    <!-- SweetAlert2 -->
+    <link rel="stylesheet" th:href="@{plugins/sweetalert2-theme-bootstrap-4/bootstrap-4.min.css}">
 </head>
 <body class="hold-transition login-page">
 <div class="login-box">
@@ -87,5 +89,27 @@
 <script th:src="@{plugins/bootstrap/js/bootstrap.bundle.min.js}"></script>
 <!-- AdminLTE App -->
 <script th:src="@{dist/js/adminlte.min.js}"></script>
+<!-- SweetAlert2 -->
+<script th:src="@{plugins/sweetalert2/sweetalert2.min.js}"></script>
+<!--Alert-->
+<script th:src="@{js/message.js}"></script>
+
+<script th:inline="javascript">
+    /*<![CDATA[*/
+
+    let isAlertSet = /*[[${alert !=null }]]*/ false;
+
+    if (isAlertSet) {
+        var isShowAlert = /*[[${alert?.show}]]*/ 'default';
+        var title = /*[[${alert?.header}]]*/ 'default';
+        var message = /*[[${alert?.message}]]*/ 'default';
+        var type = /*[[${alert?.type}]]*/ 'default';
+        if (isShowAlert) {
+            showAlert(type, title, message);
+        }
+    }
+
+    /*]]>*/
+</script>
 </body>
 </html>
