--- a/src/main/resources/templates/fragments/layout-fragments.html
+++ b/src/main/resources/templates/fragments/layout-fragments.html
@@ -87,6 +87,8 @@
     <script th:src="@{plugins/select2/js/select2.full.min.js}"></script>
     <!-- Bootstrap4 Duallistbox -->
     <script th:src="@{plugins/bootstrap4-duallistbox/jquery.bootstrap-duallistbox.min.js}"></script>
+    <!--Alert-->
+    <script th:src="@{js/message.js}"></script>
 </div>
 
 <aside th:fragment="theme_settings" class="control-sidebar control-sidebar-dark">
