ADD::Province, Districts and divisions loading from the backend

--- a/src/main/resources/templates/citizens-list.html
+++ b/src/main/resources/templates/citizens-list.html
@@ -45,6 +45,7 @@
                                             <button type="button" class="btn btn-primary float-right"
                                                     data-title="Citizen Registration"
                                                     data-formtype="0"
+                                                    data-id="0"
                                                     data-toggle="modal" data-target="#customer-registration-modal"><i
                                                     class="fas fa-user-plus"></i> Add Citizen
                                             </button>
