--- a/src/main/resources/templates/fragments/layout-fragments.html
+++ b/src/main/resources/templates/fragments/layout-fragments.html
@@ -89,6 +89,8 @@
     <script th:src="@{plugins/bootstrap4-duallistbox/jquery.bootstrap-duallistbox.min.js}"></script>
     <!--Alert-->
     <script th:src="@{js/message.js}"></script>
+    <!--Details-->
+    <script th:src="@{js/details.js}"></script>
 </div>
 
 <aside th:fragment="theme_settings" class="control-sidebar control-sidebar-dark">
